# oute-tts-rs

./: .gitignore  .gitmodules  Cargo.toml  build.rs
src/: audio_codec.rs  default_speakers.rs  interface.rs  main.rs  model.rs  prompt_processor.rs  types.rs
src/utils/: mod.rs  number_to_words.rs
