[package]
name = "oute-tts-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
tokenizers = "0.21.0"
tch = "0.18.1"
serde_json = "1.0.133"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.94"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
hound = "3.5.1"
ort = "1.16.3"
ndarray = { version = "0.15", features = ["serde"] }
llama-cpp-2 = { path = "external/llama-cpp-rs/llama-cpp-2" }

[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }